Use java 8 in application